--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
           <h2 class="advantages-title">hidden title</h2>
           <ul class="advantages-list">
             <li class="advantages-item">
+              <div class="advantages-item-svg">
+                <svg class="icon" width="64px" height="64px">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="advantages-title-secondary">Strategy</h3>
               <p class="advantages-text">
                 Our goal is to identify the business problem to walk away with
@@ -76,6 +81,11 @@
               </p>
             </li>
             <li class="advantages-item">
+              <div class="advantages-item-svg">
+                <svg class="icon" width="64px" height="64px">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="advantages-title-secondary">Punctuality</h3>
               <p class="advantages-text">
                 Bring the key message to the brand's audience for the best price
@@ -83,6 +93,11 @@
               </p>
             </li>
             <li class="advantages-item">
+              <div class="advantages-item-svg">
+                <svg class="icon" width="64px" height="64px">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="advantages-title-secondary">Diligence</h3>
               <p class="advantages-text">
                 Research and confirm brands with the strongest digital growth
@@ -90,6 +105,11 @@
               </p>
             </li>
             <li class="advantages-item">
+              <div class="advantages-item-svg">
+                <svg class="icon" width="64px" height="64px">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="advantages-title-secondary">Technologies</h3>
               <p class="advantages-text">
                 Design practice focused on digital experiences. We bring forth a
