--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </li>
             <li class="advantages-item">
               <div class="advantages-item-svg">
-                <svg class="icon" width="64px" height="64px">
+                <svg class="icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
@@ -94,7 +94,7 @@
             </li>
             <li class="advantages-item">
               <div class="advantages-item-svg">
-                <svg class="icon" width="64px" height="64px">
+                <svg class="icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -106,7 +106,7 @@
             </li>
             <li class="advantages-item">
               <div class="advantages-item-svg">
-                <svg class="icon" width="64px" height="64px">
+                <svg class="icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
