--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <ul class="advantages-list">
             <li class="advantages-item">
               <div class="advantages-item-svg">
-                <svg class="icon" width="64px" height="64px">
+                <svg class="icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -134,6 +134,54 @@
               <div class="items-name">
                 <h3 class="team-title-secondary">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
+              </div>
+              <div>
+                <ul class="team-social-list">
+                  <li class="social-link-item">
+                    <a
+                      class="social-link"
+                      href="https://www.instagram.com/"
+                      target="_blank"
+                    >
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link-item">
+                    <a
+                      class="social-link"
+                      href="https://www.twitter.com/"
+                      target="_blank"
+                    >
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link-item">
+                    <a
+                      class="social-link"
+                      href="https://www.facebook.com/"
+                      target="_blank"
+                    >
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-link-item">
+                    <a
+                      class="social-link"
+                      href="https://www.linkedin.com//"
+                      target="_blank"
+                    >
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-items">
