--- a/index.html
+++ b/index.html
@@ -367,13 +367,21 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-items">
-              <img
-                class="portfolio-img"
-                src="./images/imgapp.jpg"
-                alt="imgapp"
-                width="360"
-                height="300"
-              />
+              <div class="overlay">
+                <img
+                  class="portfolio-img"
+                  src="./images/imgapp.jpg"
+                  alt="imgapp"
+                  width="360"
+                  height="300"
+                />
+
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-items-text">
                 <h3 class="portfolio-title-secondary">Banking App</h3>
                 <p class="portfolio-text">App</p>
