--- a/index.html
+++ b/index.html
@@ -387,65 +387,100 @@
               </div>
             </li>
             <li class="portfolio-items">
-              <img
-                class="portfolio-img"
-                src="./images/qrcode.jpg"
-                alt="qrcode"
-                width="360"
-                height="300"
-              />
+              <div class="overlay">
+                <img
+                  class="portfolio-img"
+                  src="./images/qrcode.jpg"
+                  alt="qrcode"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-items-text">
                 <h3 class="portfolio-title-secondary">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-items">
-              <img
-                class="portfolio-img"
-                src="./images/laptop.jpg"
-                alt="laptop"
-                width="360"
-                height="300"
-              />
+              <div class="overlay">
+                <img
+                  class="portfolio-img"
+                  src="./images/laptop.jpg"
+                  alt="laptop"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-items-text">
                 <h3 class="portfolio-title-secondary">Meditation App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
             <li class="portfolio-items">
-              <img
-                class="portfolio-img"
-                src="./images/car.jpg"
-                alt="car"
-                width="360"
-                height="300"
-              />
+              <div class="overlay">
+                <img
+                  class="portfolio-img"
+                  src="./images/car.jpg"
+                  alt="car"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-items-text">
                 <h3 class="portfolio-title-secondary">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-items">
-              <img
-                class="portfolio-img"
-                src="./images/phone.jpg"
-                alt="phone"
-                width="360"
-                height="300"
-              />
+              <div class="overlay">
+                <img
+                  class="portfolio-img"
+                  src="./images/phone.jpg"
+                  alt="phone"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-items-text">
                 <h3 class="portfolio-title-secondary">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
               </div>
             </li>
             <li class="portfolio-items">
-              <img
-                class="portfolio-img"
-                src="./images/girl.jpg"
-                alt="girl"
-                width="360"
-                height="300"
-              />
+              <div class="overlay">
+                <img
+                  class="portfolio-img"
+                  src="./images/girl.jpg"
+                  alt="girl"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-items-text">
                 <h3 class="portfolio-title-secondary">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
