--- a/index.html
+++ b/index.html
@@ -492,8 +492,8 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <div class="footer-conteiner">
-          <div class="footer-conteiner-logo">
+        <div class="footer-container">
+          <div class="footer-container-logo">
             <a class="logo footer-logo" href="./index.html"
               >Web <span class="logo-part">Studio</span></a
             >
