--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container footer">
+      <div class="container">
         <div class="footer-container">
           <div class="footer-container-logo">
             <a class="logo footer-logo" href="./index.html"
