--- a/index.html
+++ b/index.html
@@ -491,66 +491,64 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <div class="footer-container">
-          <div class="footer-container-logo">
-            <a class="logo footer-logo" href="./index.html"
-              >Web <span class="logo-part">Studio</span></a
-            >
-            <p class="footer-text">
-              Increase the flow of customers and sales for your business with
-              digital marketing & growth solutions.
-            </p>
-          </div>
-          <div class="footer-social-container">
-            <p class="footer-social-text">Social media</p>
-            <ul class="footer-social-list">
-              <li class="social-link-item">
-                <a
-                  class="social-link"
-                  href="https://www.instagram.com/"
-                  target="_blank"
-                >
-                  <svg class="social-icon-footer" width="24" height="24">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social-link-item">
-                <a
-                  class="social-link"
-                  href="https://www.twitter.com/"
-                  target="_blank"
-                >
-                  <svg class="social-icon-footer" width="24" height="24">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social-link-item">
-                <a
-                  class="social-link"
-                  href="https://www.facebook.com/"
-                  target="_blank"
-                >
-                  <svg class="social-icon-footer" width="24" height="24">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social-link-item">
-                <a
-                  class="social-link"
-                  href="https://www.linkedin.com//"
-                  target="_blank"
-                >
-                  <svg class="social-icon-footer" width="24" height="24">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
+      <div class="container footer-container">
+        <div class="footer-container-logo">
+          <a class="logo footer-logo" href="./index.html"
+            >Web <span class="logo-part">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-social-container">
+          <p class="footer-social-text">Social media</p>
+          <ul class="footer-social-list">
+            <li class="social-link-item">
+              <a
+                class="social-link"
+                href="https://www.instagram.com/"
+                target="_blank"
+              >
+                <svg class="social-icon-footer" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-link-item">
+              <a
+                class="social-link"
+                href="https://www.twitter.com/"
+                target="_blank"
+              >
+                <svg class="social-icon-footer" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-link-item">
+              <a
+                class="social-link"
+                href="https://www.facebook.com/"
+                target="_blank"
+              >
+                <svg class="social-icon-footer" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-link-item">
+              <a
+                class="social-link"
+                href="https://www.linkedin.com//"
+                target="_blank"
+              >
+                <svg class="social-icon-footer" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
